@@ -1,3 +1,9 @@
+2005-07-26  Roman Kennke  <roman@kennke.org>
+
+	* gnu/testlet/java/util/Properties/getProperty.java:
+	New test that checks if getProperty(String) and
+	getProperty(String,String) call each other.
+
 2005-07-24  Tom Tromey  <tromey@redhat.com>
 
 	* gnu/testlet/java/util/Properties/load.java (test): Added
